--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"grunt-contrib-watch": "~0.5.3",
 		"grunt-contrib-uglify": "~0.2.2",
 		"grunt-contrib-concat": "~0.3.0",
-		"grunt-contrib-jshint": "~0.6.2"
+		"grunt-contrib-jshint": "~0.6.2",
+		"grunt-contrib-copy": "~0.7.0"
 	}
 }
