--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bootstrap-suggest-plugin",
-    "version": "0.1.8",
+    "version": "0.1.9",
     "description": "这是一个基于 bootstrap 按钮式下拉菜单组件的搜索建议插件，必须使用于按钮式下拉菜单组件上。",
     "repository": {
         "type": "git",
@@ -16,7 +16,14 @@
         "suggest",
         "dorpdown"
     ],
-    "author": "lzwme <lzwy0820@qq.com>",
+    "author": {
+        "name": "lzwme",
+        "url": "https://lzw.me"
+    },
+    "maintainers": [{
+        "name": "renxia",
+        "url": "https://lzw.me"
+    }],
     "license": "MIT",
     "homepage": "https://lzw.me/pages/demo/bootstrap-suggest-plugin",
     "engines": {
@@ -25,6 +32,9 @@
     "scripts": {
         "test": "grunt qunit",
         "build": "grunt production"
+    },
+    "dependencies": {
+        "jquery": ">1.11.0"
     },
     "devDependencies": {
         "babel-eslint": ">5.0.0",
