--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap-suggest-plugin",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "description": "这是一个基于 bootstrap 按钮式下拉菜单组件的搜索建议插件，必须使用于按钮式下拉菜单组件上。",
   "repository": {
     "type": "git",
@@ -32,18 +32,20 @@
     "node": ">= 4.1.0"
   },
   "scripts": {
-    "test": "mocha-phantomjs test/index.html -v 1366x768",
-    "build": "npm test && grunt production"
+    "start": "grunt",
+    "test": "node_modules/.bin/mocha-phantomjs test/index.html -v 1366x768",
+    "build": "grunt prod"
   },
   "dependencies": {
-    "jquery": ">=1.11.1 <3.0.0",
-    "bootstrap": "3.3.6"
+    "bootstrap": "3.3.6",
+    "jquery": ">=1.11.1 <3.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
     "chai": "^3.5.0",
     "grunt": ">0.4.1",
     "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-eslint": "^0.0.5",
     "grunt-contrib-uglify": "^2.0.0",
