--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build": "grunt prod"
   },
   "dependencies": {
-    "bootstrap": "3.3.6",
+    "bootstrap": "^3.3.7",
     "jquery": ">=1.11.1 <3.0.0"
   },
   "devDependencies": {
@@ -50,8 +50,7 @@
     "grunt-contrib-eslint": "^0.0.5",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "gruntify-eslint": "^2.0.0",
-    "mocha": "^3.0.0",
+    "gruntify-eslint": "^3.1.0",
     "mocha-phantomjs": "^4.1.0"
   }
 }
