--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "jquery": ">=1.11.1 <3.0.0"
+    "jquery": ">=1.11.1"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
