--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap-suggest-plugin",
-  "version": "0.1.21",
+  "version": "0.1.22",
   "description": "这是一个基于 bootstrap 按钮式下拉菜单组件的搜索建议插件，必须使用于按钮式下拉菜单组件上。",
   "repository": {
     "type": "git",
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "jquery": ">=1.11.1",
+    "jquery": ">=1.11.1"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
