fix: bootstrap 4.3.1 选择菜单错位修复 (#61)
close #61

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "build": "grunt prod"
   },
   "dependencies": {
+    "bootstrap": "^3.4.1",
     "jquery": ">=1.11.1"
   },
   "devDependencies": {
