chore: 更新开发依赖包版本

--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,10 @@
 test
-.gitignore
 publish.bat
 Gruntfile.js
-.eslintrc
 index.html
 _config.yml
+.editorconfig
+.eslintrc
 .github
+.gitignore
+yarn.lock
